src-tauri/tests/snapshots/streaming_send_params__params_with_custom_provider_env.snap
---
source: tests/streaming_send_params.rs
expression: "&params"
---
cwd: /abs/workspace
effortLevel: high
fastMode: false
logicalProvider: "custom:mioffice"
model: sonnet
permissionMode: bypassPermissions
prompt: hello
provider: claude
providerEnv:
  ANTHROPIC_API_KEY: sk-test
  ANTHROPIC_BASE_URL: "https://api.example.com/anthropic"
  ANTHROPIC_DEFAULT_SONNET_MODEL: provider/selected-model
resume: ~
sessionId: sidecar-sess-1
